# src/controllers/auth.controller.ts
@@ -22,7 +22,23 @@ const registerValidateSchema = Yup.object({
   fullName: Yup.string().required(),
   username: Yup.string().required(),
   email: Yup.string().required(),
-  password: Yup.string().required(),
+  password: Yup.string()
+    .required()
+    .min(6, "Password must be at least 6 characters")
+    .test(
+      "at-least-one-uppercase-letter",
+      "Contains at least one uppercase character",
+      (value) => {
+        if (!value) return false
+        const regex = /^(?=.*[A-Z])/
+        return regex.test(value)
+      }
+    )
+    .test("at-least-one-number", "Contains at least one number", (value) => {
+      if (!value) return false
+      const regex = /^(?=.*\d)/
+      return regex.test(value)
+    }),
   confirmPassword: Yup.string()
     .required()
     .oneOf([Yup.ref("password"), ""], "Password not Matched!"),
@@ -30,6 +46,13 @@ const registerValidateSchema = Yup.object({
 
 export default {
   async register(req: Request, res: Response) {
+    /**
+     #swagger.tags = ['Auth']
+      #swagger.requestBody = {
+      required: true,
+      schema: {$ref: "#/components/schemas/RegisterRequest"}
+     }
+    */
     // Get property body from req
     const { fullName, username, email, password, confirmPassword } =
       req.body as unknown as TRegister
@@ -63,6 +86,7 @@ export default {
   },
   async login(req: Request, res: Response) {
     /**
+     #swagger.tags = ['Auth']
      #swagger.requestBody = {
       required: true,
       schema: {$ref: "#/components/schemas/LoginRequest"}
@@ -81,6 +105,7 @@ export default {
             username: identifier,
           },
         ],
+        isActive: true, // Only active users can login
       })
       if (!userByIdentifier) {
         return res.status(403).json({
@@ -117,9 +142,9 @@ export default {
       })
     }
   },
-
   async me(req: IReqUser, res: Response) {
     /**
+     #swagger.tags = ['Auth']
      #swagger.security = [{
       "bearerAuth": []
      }]
@@ -135,6 +160,39 @@ export default {
       const err = error as unknown as Error
       res.status(400).json({
         message: `Login Failed! ${err.message}`,
+        data: null,
+      })
+    }
+  },
+  async activation(req: Request, res: Response) {
+    /**
+     #swagger.tags = ['Auth']
+     #swagger.requestBody = {
+      required: true,
+      schema: {$ref: '#/components/schemas/ActivationRequest'}
+     }
+     */
+    try {
+      const { code } = req.body as { code: string }
+      const user = await UserModel.findOneAndUpdate(
+        {
+          activationCode: code,
+        },
+        {
+          isActive: true,
+        },
+        {
+          new: true,
+        }
+      )
+      res.status(200).json({
+        message: "User Successfully Activated!",
+        data: user,
+      })
+    } catch (error) {
+      const err = error as unknown as Error
+      res.status(400).json({
+        message: `Activation Failed! ${err.message}`,
         data: null,
       })
     }
